@@ -13,6 +13,10 @@
             border: 1px solid red;
             color: #cc0000;
         }
+
+        li.removed {
+            text-decoration: line-through;
+        }
     </style>
 </head>
 
@@ -32,6 +36,10 @@
     <ul>
         <li>[Bugfix] Incompatibility with Mac OS X 10.6 (Snow Leopard) [<a href="http://trac.cyberduck.ch/ticket/3039">#3039</a>]
         </li>
+        <li>[Feature] 64-Bit support</li>
+        <li>[Feature] New application icon (Thanks to Dietmar Kerschner)</li>
+        <li class="removed">[Feature] MobileMe bookmark syncing</li>
+        <li class="removed">[Feature] AppleScript support</li>
     </ul>
 </div>
 
