@@ -6,6 +6,8 @@ Changelog. Last modified: $Date$
 
 3.3
 - [Bugfix] Incompatibility with Mac OS X 10.6 (Snow Leopard) [#3039]
+- [Feature] 64-Bit support
+- [Feature] New application icon (Thanks to Dietmar Kerschner)
 
 3.2.1
 - [Feature] Create placeholder objects for virtual directory (S3)
